force-app/main/default/objects/Case/fields/GDPR_Cleaned__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Cleaned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the Case has been processed by the GDPR batch job</description>
    <label>GDPR Cleaned</label>
    <type>Checkbox</type>
</CustomField>