force-app/main/default/objects/Case/fields/Gender_Other__c.field-meta.xml
<CustomField>
    <fullName>Gender_Other__c</fullName>
    <label>Gender Other</label>
    <length>30</length>
    <type>Text</type>
</CustomField>