force-app/main/default/objects/Case/fields/Preferred_Class__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Class__c</fullName>
    <description>Destiny 2</description>
    <label>Preferred Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hunter</fullName>
            </value>
            <value>
                <fullName>Titan</fullName>
            </value>
            <value>
                <fullName>Warlock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>