force-app/main/default/objects/Case/fields/Preferred_Class_Element__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Class_Element__c</fullName>
    <description>Destiny 2</description>
    <label>Preferred Class Element</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ark</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>