force-app/main/default/objects/Case/fields/Preferred_Platforms__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Platforms__c</fullName>
    <label>Preferred Platforms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Xbox</fullName>
            </value>
            <value>
                <fullName>Playstation</fullName>
            </value>
            <value>
                <fullName>Nintendo</fullName>
            </value>
            <value>
                <fullName>Smartphone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>