force-app/main/default/objects/Case/fields/Preferred_Sub_Job__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Sub_Job__c</fullName>
    <description>Final Fantasy XI</description>
    <label>Preferred Sub Job</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FFXI_Jobs</valueSetName>
    </valueSet>
</CustomField>