force-app/main/default/objects/Case/fields/TestClosedDate__c.field-meta.xml
<CustomField>
    <fullName>TestClosedDate__c</fullName>
    <description>Used for testing purposes. Can be used to copy the value in Case.ClosedDate and be make non-editable</description>
    <label>TestClosedDate</label>
    <type>Date</type>
</CustomField>