force-app/main/default/objects/Case/fields/Year_Born__c.field-meta.xml
<CustomField>
    <fullName>Year_Born__c</fullName>
    <label>Year Born</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>